--- a/arch/arm64/configs/vayu_user_defconfig
+++ b/arch/arm64/configs/vayu_user_defconfig
@@ -276,6 +276,8 @@ CONFIG_MHI_QCOM=y
 CONFIG_MHI_NETDEV=y
 CONFIG_MHI_UCI=y
 CONFIG_ZRAM=y
+CONFIG_ZRAM_DEF_COMP_LZORLE=y
+CONFIG_ZRAM_DEF_COMP="lzo-rle"
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
